feat: project section

--- a/index.html
+++ b/index.html
@@ -11,14 +11,32 @@
         <h1 class="nav-title">gitniched</h1>
         <div class="nav-button">
             <a href="#projects">Projects</a>
-            <a href="#aboutme">About Me</a>
+            <a href="#about-me">About Me</a>
             <a href="#skills">Skills</a>
+        </div>
+    </div>ss
+
+    <div class="introduction-row">
+        <div class="aboutme" id = "about-me">
+            <h2> Hello! I'm <br> <span class="name">Nicholas Pacoma</span></h2>
+        </div>
+        <div class="my-picture">
+            <img src="/pictures/myPic.png" alt="My Picture" class="profile-pic">
         </div>
     </div>
 
-    <div class="row">
-        <div class="about-me">
-            <h2> Hello! I'm <br> <span class="name">Nicholas Pacoma</span></h2>
+    <div class="projects-row">
+        <h2>Projects</h2>
+        <div class="projects-container" id="projects">
+            <div class="image-placeholder">
+                <h1> Image PlaceHolder</h1>
+            </div>
+            <div class="image-placeholder">
+                <h1> Image PlaceHolder</h1>
+            </div>
+            <div class="image-placeholder">
+                <h1> Image PlaceHolder</h1>
+            </div>            
         </div>
     </div>
 </body>
