feat: added skill row and footer

--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 <body style="background-color: rgb(8, 8, 18);">
     <div class="navbar">
         <h1 class="nav-title">gitniched</h1>
+        <img src="/pictures/takumi.jpg" alt="Logo" class="takumi">
         <div class="nav-button">
-            <a href="#projects">Projects</a>
             <a href="#about-me">About Me</a>
+            <a href="#projects">Projects</a>
             <a href="#skills">Skills</a>
+            <a href="#contacts">Contacts</a>
         </div>
-    </div>ss
+    </div>
 
     <div class="introduction-row">
         <div class="aboutme" id = "about-me">
             <h2> Hello! I'm <br> <span class="name">Nicholas Pacoma</span></h2>
+                <p1>a 19 year-old BS Computer Science student at the <br>
+                    <span class="university">University of the Philippines Los Baños</span>.
+                </p1>
         </div>
         <div class="my-picture">
             <img src="/pictures/myPic.png" alt="My Picture" class="profile-pic">
+            <div class="picture-overlay"></div>
         </div>
     </div>
 
@@ -36,8 +42,59 @@
             </div>
             <div class="image-placeholder">
                 <h1> Image PlaceHolder</h1>
-            </div>            
+            </div>         
+        </div>
+        <div class="descriptions-container">
+            <div class="project-description">
+                <h3> Project Description </h3>
+                <p> This is a placeholder for my project descriptions. More details about each project will be added here soon. Stay tuned!</p>
+            </div>
+            <div class="project-description">
+                <h3> Project Description </h3>
+                <p> This is a placeholder for my project descriptions. More details about each project will be added here soon. Stay tuned!</p>
+            </div> 
+            <div class="project-description">
+                <h3> Project Description </h3>
+                <p> This is a placeholder for my project descriptions. More details about each project will be added here soon. Stay tuned!</p>
+            </div> 
         </div>
     </div>
+
+    <div class="skills-row">
+        <h2>Skills</h2>
+        <div class="skills-container" id="skills">
+            <div class="skill-box">
+                <img src="/pictures/python-logo.png" alt="Python Logo" class="skill-logo">
+                <h3> Python </h3>
+            </div>
+            <div class="skill-box">
+                <img src="/pictures/c-logo.png" alt="C Logo" class="skill-logo">
+                <h3> C </h3>
+            </div>
+            <div class="skill-box">
+                <img src="/pictures/java-logo.png" alt="Java Logo" class="skill-logo">
+                <h3> Java </h3>
+            </div>
+            <div class="skill-box" id="r-logo">
+                <img src="/pictures/r-logo.png" alt="R Logo" class="skill-logo">
+                <h3> R </h3>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-content">
+            <div class="contacts" id="contacts">
+                <h2 style="text-align: center;">Contacts</h2>
+                <p1>Email: nopacoma@up.edu.ph</p1><br>
+                <p1>github: </p1> <a href="https://github.com/gitniched" 
+                style="text-decoration: none; color: azure">gitniched</a>
+                <br>
+                <p1>Number: +639673301214</p1>
+            </div>
+        </div>
+    </footer>
+
+
 </body>
 </html>
