fix: some wrong spellings

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         I am an aspiring developer planning to focus on software development and how technology can be used to solve real-world problems. 
                         I enjoy learning new programming concepts, experimenting with different tools and frameworks, and improving my skills through projects 
                         and hands-on practice. Outside of classes, I like exploring new tehcnologies, coding in my free time, and continuously challengeing 
-                        myself to grow as a developer. I'm always eater to learn, collaborate with others, and gain experiences that will help me become a 
+                        myself to grow as a developer. I'm always eager to learn, collaborate with others, and gain experiences that will help me become a 
                         better software engineer in the future.</span>
                 </p1>
 
