--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-color: rgb(8, 8, 18);">
+    <!-- Navigation Bar -->
     <div class="navbar" id="navbar">
         <h1 class="nav-title">gitniched</h1>
         <img src="/pictures/takumi.jpg" alt="Logo" class="takumi">
@@ -18,6 +19,7 @@
         </div>
     </div>
 
+    <!-- Introduction & About Me Section -->
     <div class="introduction-row">
         <div class="aboutme" id = "about-me">
             <h2> Hello! I'm <br> <span class="name">Nicholas Pacoma</span></h2>
@@ -39,6 +41,7 @@
         </div>
     </div>
 
+    <!-- Projects Section -->
     <div class="projects-row" id ="projects-row">
         <h2>Projects</h2>
         <div class="projects-container" id="projects">
@@ -80,6 +83,7 @@
         </div>
     </div>
 
+    <!-- Skills Section -->
     <div class="skills-row">
         <h2>Skills</h2>
         <div class="skills-container" id="skills">
@@ -102,6 +106,7 @@
         </div>
     </div>
 
+    <!--\ Footer with Contact Information -->
     <footer>
         <div class="footer-content">
             <div class="contacts" id="contacts">
