--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         
         <div class="my-picture">
-            <img src="/pictures/myPic.png" alt="My Picture" class="profile-pic">
+            <img src="pictures/myPic.png" alt="My Picture" class="profile-pic">
             <div class="picture-overlay"></div>
         </div>
     </div>
@@ -88,19 +88,19 @@
         <h2>Skills</h2>
         <div class="skills-container" id="skills">
             <div class="skill-box">
-                <img src="/pictures/python-logo.png" alt="Python Logo" class="skill-logo">
+                <img src="pictures/python-logo.png" alt="Python Logo" class="skill-logo">
                 <h3> Python </h3>
             </div>
             <div class="skill-box">
-                <img src="/pictures/c-logo.png" alt="C Logo" class="skill-logo">
+                <img src="pictures/c-logo.png" alt="C Logo" class="skill-logo">
                 <h3> C </h3>
             </div>
             <div class="skill-box">
-                <img src="/pictures/java-logo.png" alt="Java Logo" class="skill-logo">
+                <img src="pictures/java-logo.png" alt="Java Logo" class="skill-logo">
                 <h3> Java </h3>
             </div>
             <div class="skill-box" id="r-logo">
-                <img src="/pictures/r-logo.png" alt="R Logo" class="skill-logo">
+                <img src="pictures/r-logo.png" alt="R Logo" class="skill-logo">
                 <h3> R </h3>
             </div>
         </div>
