fix: fixed image path of nav-avatar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navigation Bar -->
     <div class="navbar" id="navbar">
         <h1 class="nav-title">gitniched</h1>
-        <img src="/pictures/takumi.jpg" alt="Logo" class="takumi">
+        <img src="pictures/takumi.jpg" alt="Logo" class="takumi">
         <div class="nav-button">
             <a href="#about-me">About Me</a>
             <a href="#projects-row">Projects</a>
